--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,20 @@
 *.iml
 .gradle
 /local.properties
+
+# IntelliJ
+*.iml
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/assetWizardSettings.xml
+.idea/dictionaries
+.idea/libraries
 /.idea/caches
-/.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
+
 /.idea/assetWizardSettings.xml
 .DS_Store
 /build
