--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -10,13 +11,17 @@ android {
         applicationId "com.etsisi.quizz"
         minSdk 21
         targetSdk 31
-        versionCode 1
-        versionName "1.0"
+        versionCode rootProject.ext.appVersionCode
+        versionName rootProject.ext.appVersionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
+        debug {
+            applicationIdSuffix ".debug"
+            debuggable true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -29,15 +34,45 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        dataBinding = true
+        viewBinding = true
+    }
+    packagingOptions {
+        resources.excludes += "DebugProbesKt.bin"
+    }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
+    // AndroidX
+    implementation rootProject.ext.androidAppCompat
+    implementation rootProject.ext.androidKotlinCore
+    implementation rootProject.ext.fragmentKtxDependency
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Coroutines
+    implementation rootProject.ext.coroutinesKtxDependency
+
+    //Glide
+    implementation rootProject.ext.glideDependency
+    kapt rootProject.ext.glideAnnotation
+
+    //Koin (Dependency injection)
+    implementation rootProject.ext.koinDependency
+
+    //Lifecycle - Architecture components
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycleVersion"
+    implementation rootProject.ext.liveDataKtxDependency
+    implementation rootProject.ext.savedStateKtxDependency
+    implementation rootProject.ext.lifecycleKtxDependency
+    implementation rootProject.ext.viewModelKtxDependency
+
+    // Retrofit
+    implementation rootProject.ext.retrofitDependency
+    implementation rootProject.ext.retrofitGsonDependency
 }
