--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Quizz"
+        android:theme="@style/Theme.App.Splash"
         android:allowBackup="false">
         <activity
             android:name=".presentation.ui.login.view.LoginActivity"
