--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -51,6 +52,7 @@ dependencies {
     implementation rootProject.ext.fragmentKtxDependency
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -71,6 +73,10 @@ dependencies {
     implementation rootProject.ext.savedStateKtxDependency
     implementation rootProject.ext.lifecycleKtxDependency
     implementation rootProject.ext.viewModelKtxDependency
+
+    //JetPack
+    implementation rootProject.ext.navigationFragKtxDependency
+    implementation rootProject.ext.navigationKtxDependency
 
     // Retrofit
     implementation rootProject.ext.retrofitDependency
