--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.etsisi.quizz">
+    package="com.etsisi.appquitectura">
 
     <application
-        android:name=".application.BaseApplication"
+        android:name="com.etsisi.appquitectura.application.BaseApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.App.Splash"
         android:allowBackup="false">
         <activity
-            android:name=".presentation.ui.login.view.LoginActivity"
+            android:name="com.etsisi.appquitectura.presentation.ui.login.view.LoginActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".presentation.ui.main.view.MainActivity"
+            android:name="com.etsisi.appquitectura.presentation.ui.main.view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
