--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.1'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
+        classpath 'com.google.gms:google-services:4.3.10'
 
         def nav_version = '2.5.0-alpha03'
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
