--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,7 +7,9 @@ ext {
 
     //Versions
     appCompatVersion = '1.4.0'
+    authVersion = '20.1.0'
     coroutineVersion = '1.6.0'
+    firestoreVersion = '24.0.1'
     fragmentVersion = '1.4.0'
     glideVersion = '4.12.0'
     koinVersion = '3.1.4'
@@ -23,10 +25,14 @@ ext {
 
     coroutinesKtxDependency = "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutineVersion"
 
+    firestoreDependency = "com.google.firebase:firebase-firestore:$firestoreVersion"
+
     fragmentKtxDependency = "androidx.fragment:fragment-ktx:$fragmentVersion"
 
     glideDependency = "com.github.bumptech.glide:glide:$glideVersion"
     glideAnnotation = "com.github.bumptech.glide:compiler:$glideVersion"
+
+    googleAuthDependency = "com.google.android.gms:play-services-auth:$authVersion"
 
     koinDependency = "io.insert-koin:koin-android:$koinVersion"
 
