--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,10 @@ captures/
 .externalNativeBuild
 .cxx/
 
-# Google Services (e.g. APIs or Firebase)
-# google-services.json
+# Keystore files
+# Uncomment the following lines if you do not want to check your keystore files in.
+*.jks
+keystore.properties
 
 # Freeline
 freeline.py
