--- a/app/.gitignore
+++ b/app/.gitignore
@@ -45,10 +45,8 @@ captures/
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
 
-# Keystore files
-# Uncomment the following lines if you do not want to check your keystore files in.
-#*.jks
-#*.keystore
+# Google Services (e.g. APIs or Firebase)
+google-services.json
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
