--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,11 @@
             android:name="com.etsisi.appquitectura.presentation.ui.login.view.LoginActivity"
             android:windowSoftInputMode="adjustResize"
             android:theme="@style/LoginActivityStyle"
+            android:noHistory="true"
             android:exported="true" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="com.etsisi.appquitectura.presentation.ui.main.view.MainActivity"
-            android:exported="true">
-            <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
+
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
                 <data
@@ -33,6 +27,18 @@
                 <data
                     android:host="etsisi.page.link"
                     android:scheme="http"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.etsisi.appquitectura.presentation.ui.main.view.MainActivity"
+            android:launchMode="singleTask"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
             </intent-filter>
         </activity>
     </application>
