--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,6 +15,7 @@ ext {
     koinVersion = '3.1.4'
     ktxCoreVersion = '1.7.0'
     lifecycleVersion = '2.4.0'
+    lottieVersion = '5.0.2'
     navigationVersion = '2.5.0-alpha03'
     progressButtonVersion = '2.1.0'
     retrofitVersion = '2.9.0'
@@ -45,6 +46,8 @@ ext {
 
     liveDataKtxDependency = "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
     lifecycleKtxDependency = "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
+
+    lottieDependency = "com.airbnb.android:lottie:$lottieVersion"
 
     navigationFragKtxDependency = "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
     navigationKtxDependency = "androidx.navigation:navigation-ui-ktx:$navigationVersion"
