--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,30 +4,31 @@
 
     <application
         android:name="com.etsisi.appquitectura.application.BaseApplication"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.App.Splash"
-        android:allowBackup="false">
+        android:theme="@style/Theme.App.Splash">
         <activity
             android:name="com.etsisi.appquitectura.presentation.ui.login.view.LoginActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:theme="@style/LoginActivityStyle"
-            android:screenOrientation="nosensor"
+            android:exported="true"
             android:noHistory="true"
-            android:exported="true" >
+            android:screenOrientation="nosensor"
+            android:theme="@style/LoginActivityStyle"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
                 <data
                     android:host="etsisi.page.link"
-                    android:scheme="https"/>
+                    android:scheme="https" />
                 <data
                     android:host="etsisi.page.link"
-                    android:scheme="http"/>
+                    android:scheme="http" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,11 +37,12 @@
         </activity>
         <activity
             android:name="com.etsisi.appquitectura.presentation.ui.main.view.MainActivity"
+            android:exported="true"
             android:launchMode="singleTask"
             android:screenOrientation="nosensor"
-            android:exported="true">
+            android:theme="@style/Theme.Appquitectura">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
     </application>
