--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,9 @@ dependencies {
     implementation rootProject.ext.firestoreDependency
     implementation rootProject.ext.dynamicLinksDependency
 
+    //Flexbox
+    implementation rootProject.ext.flexboxDependency
+
     //Google Play Services
     implementation rootProject.ext.googleAuthDependency
 
