--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,23 +3,24 @@
     package="com.etsisi.appquitectura">
 
     <application
-        android:name="com.etsisi.appquitectura.application.BaseApplication"
+        android:name=".application.BaseApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.App.Splash">
+        android:theme="@style/Theme.Appquitectura">
         <activity
-            android:name="com.etsisi.appquitectura.presentation.ui.login.view.LoginActivity"
-            android:exported="true"
-            android:noHistory="true"
-            android:screenOrientation="nosensor"
-            android:theme="@style/LoginActivityStyle"
-            android:windowSoftInputMode="adjustResize">
+            android:name=".presentation.ui.splash.view.SplashActivity"
+            android:theme="@style/SplashTheme"
+            android:launchMode="singleTask"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
@@ -30,13 +31,21 @@
                     android:host="etsisi.page.link"
                     android:scheme="http" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".presentation.ui.login.view.LoginActivity"
+            android:exported="true"
+            android:noHistory="true"
+            android:launchMode="singleInstance"
+            android:screenOrientation="nosensor"
+            android:theme="@style/LoginTheme"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.etsisi.appquitectura.presentation.ui.main.view.MainActivity"
+            android:name=".presentation.ui.main.view.MainActivity"
             android:exported="true"
             android:launchMode="singleTask"
             android:screenOrientation="nosensor"
