--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Appquitectura">
+        android:theme="@style/Theme.Appquitectura.Splash">
         <activity
-            android:name=".presentation.ui.splash.view.SplashActivity"
-            android:theme="@style/Theme.Appquitectura.Splash"
-            android:launchMode="singleTask"
-            android:exported="true">
+            android:name=".presentation.ui.login.view.LoginActivity"
+            android:exported="true"
+            android:launchMode="singleInstance"
+            android:screenOrientation="nosensor"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
@@ -33,26 +33,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".presentation.ui.login.view.LoginActivity"
-            android:exported="true"
-            android:noHistory="true"
+            android:name=".presentation.ui.main.view.MainActivity"
             android:launchMode="singleInstance"
             android:screenOrientation="nosensor"
-            android:theme="@style/Theme.Appquitectura.Login"
-            android:windowSoftInputMode="adjustResize">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".presentation.ui.main.view.MainActivity"
-            android:exported="true"
-            android:launchMode="singleTask"
-            android:screenOrientation="nosensor"
+            android:exported="false"
             android:theme="@style/Theme.Appquitectura.Main">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-            </intent-filter>
         </activity>
     </application>
 
