--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,4 +125,7 @@ dependencies {
 
     //Splash
     implementation rootProject.ext.splashScreenDependency
+
+    //ViewPager2
+    implementation rootProject.ext.viewPager2Dependency
 }
