--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -22,6 +22,7 @@ ext {
     progressButtonVersion = '2.1.0'
     retrofitVersion = '2.9.0'
     splashscreenVersion = '1.0.0-beta01'
+    viewPager2Version = '1.0.0'
 
     //Dependencies
     androidAppCompat = "androidx.appcompat:appcompat:$appCompatVersion"
@@ -66,5 +67,7 @@ ext {
     retrofitGsonDependency = "com.squareup.retrofit2:converter-gson:$retrofitVersion"
 
     splashScreenDependency = "androidx.core:core-splashscreen:$splashscreenVersion"
+
+    viewPager2Dependency = "androidx.viewpager2:viewpager2:$viewPager2Version"
 
 }
