--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,13 +119,21 @@ dependencies {
     //Progress Button
     implementation rootProject.ext.progressButtonDependency
 
-    // Retrofit
+    //Retrofit
     implementation rootProject.ext.retrofitDependency
     implementation rootProject.ext.retrofitGsonDependency
+
+    //Room
+    implementation rootProject.ext.roomDependency
+    implementation rootProject.ext.roomCoroutinesDependency
+    kapt rootProject.ext.roomAnnotation
 
     //Splash
     implementation rootProject.ext.splashScreenDependency
 
     //ViewPager2
     implementation rootProject.ext.viewPager2Dependency
+
+    //WorkManager
+    implementation rootProject.ext.workManagerDependency
 }
