--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,10 +39,12 @@ android {
 
     buildTypes {
         debug {
+            buildConfigField "int", "DATABASE_VERSION", "${rootProject.ext.databaseDebugVersion}"
             applicationIdSuffix ".debug"
             debuggable true
         }
         release {
+            buildConfigField "int", "DATABASE_VERSION", "${rootProject.ext.databaseReleaseVersion}"
             minifyEnabled false
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -60,6 +62,7 @@ android {
         viewBinding = true
     }
     packagingOptions {
+        exclude 'META-INF/atomicfu.kotlin_module'
         resources.excludes += "DebugProbesKt.bin"
     }
 }
