--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,6 +4,8 @@ ext {
     appVersionPatch = 0
     appVersionCode = appVersionMajor * 100 + appVersionMinor * 10 + appVersionPatch
     appVersionName = "${appVersionMajor}.${appVersionMinor}.${appVersionPatch}"
+    databaseDebugVersion = 11
+    databaseReleaseVersion = 1
 
     //Versions
     appCompatVersion = '1.4.0'
