--- a/app/build.gradle
+++ b/app/build.gradle
@@ -139,6 +139,9 @@ dependencies {
     //ViewPager2
     implementation rootProject.ext.viewPager2Dependency
 
+    //Wheel
+    implementation rootProject.ext.rouletteDependency
+
     //WorkManager
     implementation rootProject.ext.workManagerDependency
 }
