--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.etsisi.appquitectura">
 
     <queries>
@@ -18,7 +19,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Appquitectura.Splash">
+        android:theme="@style/Theme.Appquitectura.Splash"
+        tools:replace="android:allowBackup">
         <activity
             android:name=".presentation.ui.login.view.LoginActivity"
             android:exported="true"
