--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,8 @@ android {
 
 dependencies {
 
+    implementation project(path: ':analytics')
+
     // AndroidX
     implementation rootProject.ext.androidAppCompat
     implementation rootProject.ext.androidKotlinCore
